--- a/website/src/index.html
+++ b/website/src/index.html
@@ -9,26 +9,25 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
-
 </head>
 <body>
-    <nav class="g-col-12 fixed-top">
+    <header class="fixed-top">
         <a href="#" class="logo">LOGO</a>
-        <ul class="menu">
-            <li class="active"><a href="#main" >Home</a></li>	
-            <li><a href="#about">About</a></li>	
-            <li><a href="#skills">Skills</a></li>	
-            <li><a href="#projects">Projects</a></li>		
-            <li><a href="#contact-btn">Contact</a></li>
+        <ul class="row">
+            <li class="col"><a href="#main">Home</a></li>	
+            <li class="col"><a href="#about">About</a></li>	
+            <li class="col"><a href="#skills">Skills</a></li>	
+            <li class="col"><a href="#projects">Projects</a></li>		
+            <li class="col"><a href="#contact-btn">Contact</a></li>
         </ul>
         <a href="#" class="lang">En</a>
-    </nav>
-    <section class="grid main" id="main">
-        <div class="g-col-12 name">
+    </header>
+    <section class="main" id="main">
+        <div class="name">
             <p>Hello</p>
             <h1>I'm Anthony</h1>
             <p class="details">I am a full stack developer</p>
-            <a href="#" class="cv-btn">Download CV</a>
+            <a href="/website/src/resources/FullStackdeveloper_resume.docx" class="cv-btn">Download CV</a>
         </div>
         <div class="social">
             <a href="#"><i class="fab fa-facebook-f"></i></a>	
@@ -37,7 +36,7 @@
             <a href="#"><i class="fab fa-youtube"></i></a>	
         </div>
     </section>
-    <section id="about" class="grid about">
+    <section id="about" class="about">
         <div class="about-text">
             <h1>About Me</h1>
             <h2>FreeLancing FrontEnd Developer</h2>
