--- a/website/src/index.html
+++ b/website/src/index.html
@@ -25,8 +25,8 @@
     <section class="main" id="main">
         <div class="name">
             <p>Hello</p>
-            <h1>I'm Anthony</h1>
-            <p class="details">I am a full stack developer</p>
+            <h1>I'm Jackson</h1>
+            <p class="details">I am a full stack developer who is proficient in both Front End and Back End web development. Front End development refers to user-facing software, built and managed using programming languages like HTML, CSS, and JavaScript.</p>
             <a href="/website/src/resources/FullStackdeveloper_resume.docx" class="cv-btn">Download CV</a>
         </div>
         <div class="social">
@@ -39,8 +39,8 @@
     <section id="about" class="about">
         <div class="about-text">
             <h1>About Me</h1>
-            <h2>FreeLancing FrontEnd Developer</h2>
-            <p>Enjoy the ultimate web design editor. Divi is like Photoshop or Sketch for the web. It brings an advanced design interface to WordPress that both beginners and experts will fall in love with. It's incredibly smart, super flexible, amazingly powerful and visual by nature. This is how designing for the web is meant to be done.</p>
+            <h2>FreeLancing Full Stack Developer</h2>
+            <p>I have some skills in a wide variety of coding niches, from databases to graphic design and UI/UX management in order to do their job well. I am something of a swing, ready to assist wherever needed in the process.</p>
             <button>View More Details</button>
         </div>
         <div class="about-model">
