--- a/website/src/index.html
+++ b/website/src/index.html
@@ -13,7 +13,19 @@
 <body>
     <header class="fixed-top">
         <a href="#" class="logo">LOGO</a>
-        <ul class="row">
+        <div class="dropdown">
+            <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+              Menu
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+              <li><a class="dropdown-item" href="#main">Home</a></li>
+              <li><a class="dropdown-item" href="#about">About</a></li>
+              <li><a class="dropdown-item" href="#skills">Skills</a></li>
+              <li><a class="dropdown-item" href="#projects">Projects</a></li>
+              <li><a class="dropdown-item" href="#contact-btn">Contact</a></li>
+            </ul>
+        </div>
+        <ul class="row menu">
             <li class="col"><a href="#main">Home</a></li>	
             <li class="col"><a href="#about">About</a></li>	
             <li class="col"><a href="#skills">Skills</a></li>	
